--- a/css/estilos.css
+++ b/css/estilos.css
@@ -9,12 +9,15 @@ body {
 label {
     display: block;
     text-align: center;
+    margin: 8px;
 }
 
 input {
     display: block;
-    width: 100%;
+    width: 70%;
+    margin: auto;
     margin-bottom: 10px;
+
 }
 
 main {
@@ -30,6 +33,7 @@ main {
     z-index: 0;
     background-image: url("../img/ushuaia.jpg");
     background-color: transparent;
+    background-size: cover;
 }
 
 .form-container {
@@ -70,4 +74,28 @@ main {
     background-color: coral;
     color: white;
     height: 30px;
+}
+
+@media(max-width:480px) {
+    main {
+        display: block;
+    }
+
+    .form-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+        position: absolute;
+        top:30%;
+    }
+
+    .left-img {
+        width: 100%;
+        height: 30%;
+        background-image: url("../img/ushuaia.jpg");
+        background-color: transparent;
+        background-size: cover;
+
+    }
 }
